--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,29 +39,22 @@ dependencies {
     implementation 'com.android.support:support-v13:23.4.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-// DbFlow
+    // DbFlow
     kapt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
-
     compile 'com.android.support:recyclerview-v7:21.0.0'
     compile 'com.android.support:cardview-v7:23.0.0'
-
     // Dagger core
     compile 'com.google.dagger:dagger:2.11'
     kapt 'com.google.dagger:dagger-compiler:2.11'
-
     // Dagger android
     compile 'com.google.dagger:dagger-android:2.11'
     kapt 'com.google.dagger:dagger-android-processor:2.11'
-
     compile 'com.github.Zhuinden:simple-stack:1.7.2'
-
     compile 'com.jakewharton.timber:timber:4.5.1'
-
     compile 'nz.bradcampbell:paperparcel:2.0.4'
     compile 'nz.bradcampbell:paperparcel-kotlin:2.0.4'
     kapt 'nz.bradcampbell:paperparcel-compiler:2.0.4'
-
-
+    implementation files('libs/BarcodeAPI_V1_1_12.jar')
 }
