--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 'Zebra Technologies Corp:EMDK APIs:23'
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.income.icminwentaryzacja"
@@ -34,6 +34,7 @@ repositories {
 def dbflow_version = "4.0.2"
 
 dependencies {
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:23.4.0'
     implementation 'com.android.support:design:23.4.0'
     implementation 'com.android.support:support-v13:23.4.0'
