--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:name="com.income.icminwentaryzacja.InitApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:theme="@style/MyMaterialTheme">
+        android:theme="@style/MyMaterialTheme"
+        android:label="">
         <uses-library
             android:name="com.symbol.emdk"
             android:required="false"/>
@@ -16,7 +17,6 @@
         <activity
             android:name="com.income.icminwentaryzacja.activities.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label=""
             android:logo="@drawable/icm_inw_napis_logo">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN"/>
