--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:23.4.0'
     implementation 'com.android.support:design:23.4.0'
+    implementation 'com.android.support:cardview-v7:23.4.0'
     implementation 'com.android.support:support-v13:23.4.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
