--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,8 @@ dependencies {
     compile 'nz.bradcampbell:paperparcel:2.0.4'
     compile 'nz.bradcampbell:paperparcel-kotlin:2.0.4'
     kapt 'nz.bradcampbell:paperparcel-compiler:2.0.4'
+// RxJava
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation files('libs/BarcodeAPI_V1_1_12.jar')
 }
