--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,16 @@
         android:name="com.income.icminwentaryzacja.InitApp"
         android:allowBackup="true"
         android:icon="@drawable/icminventory_icon"
-        android:theme="@style/MyMaterialTheme"
-        android:label="">
+        android:label=""
+        android:theme="@style/MyMaterialTheme">
         <uses-library
             android:name="com.symbol.emdk"
             android:required="false"/>
 
         <activity
             android:name="com.income.icminwentaryzacja.activities.MainActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:logo="@drawable/icminwentory_title">
+            android:logo="@drawable/icminwentory_title"
+            android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN"/>
 
