--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation files('libs/BarcodeAPI_V1_1_12.jar')
+    //Joda Time
+    implementation 'net.danlew:android.joda:2.9.9.3'
 }
