--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.income.icminventory_datalogic"
+        applicationId "com.income.icminventory"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 13
-        versionName "1.04"
+        versionCode 14
+        versionName "1.05"
     }
 
     compileOptions {
